[package]
name = "lwproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
log = "0.4.28"
rand = "0.9.2"
rustls = "0.23.32"
rustls-pemfile = "2.2.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.28.0"
web-transport-quinn = "0.8.1"
